--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,4 +11,8 @@ services:
             NODE_ENV: production
       environment:
          - NODE_ENV=production
+         - PORT=3000
+         - MONGO_USER=${MONGO_USER}
+         - MONGO_PASSWORD=${MONGO_PASSWORD}
+         - SESSION_SECRET=${SESSION_SECRET}
       command: node server.js
